--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -38,6 +38,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.DiaryActivity" />
         </activity>
+        <activity
+            android:name="de.hawlandshut.rueckfallprophylaxe.ContactpointListActivity"
+            android:label="@string/title_activity_contactpoint_list"
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ContactpointListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.hawlandshut.rueckfallprophylaxe.ContactpointListActivity" />
+        </activity>
+         <activity
+            android:name="de.hawlandshut.rueckfallprophylaxe.ContactpointMActapivity"
+            android:label="@string/title_activity_contactpoint_map"
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ContactpointMapActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.hawlandshut.rueckfallprophylaxe.ContactpointMapActivity" />
+        </activity>
     </application>
 
 </manifest>
