--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -7,13 +7,27 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-        <uses-permission android:name="android.permission.INTERNET" />
+    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+ 
+    <!-- Required to show current location -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+ 
+    <!-- Required OpenGL ES 2.0. for Maps V2 -->
+   	<uses-feature
+       	android:glEsVersion="0x00020000"
+       	android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.Startseite"
             android:label="@string/app_name" >
@@ -79,6 +93,13 @@
             android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.NotfallKofferActivity"
             android:label="@string/title_activity_koffer2">
         </activity>
+        <meta-data
+   			android:name="com.google.android.gms.version"
+    		android:value="@integer/google_play_services_version" />
+        
+		 <!-- Goolge Maps API Key -->
+		<meta-data
+     		android:name="com.google.android.maps.v2.API_KEY"
+     		android:value="AIzaSyAZvUzAQR5yiFEQW6Hb7VrmIIYJDxkRG7M" />
     </application>
-
 </manifest>
