--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="de.hawlandshut.rueckfallprophylaxe.ui.Startseite"
+            android:name="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryActivity"
             android:label="@string/title_activity_diary"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" >
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" />
@@ -56,7 +56,7 @@
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.ContactpointListActivity"
             android:label="@string/title_activity_contactpoint_list"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" >
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" />
@@ -72,7 +72,7 @@
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.EmotionActivity"
             android:label="@string/title_activity_emotion"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" >
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.Startseite" /> 
@@ -86,11 +86,11 @@
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.EmotionActivity" />
         </activity>
         <activity android:name="NotfallKofferActivity"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.Startseite"
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity"
             android:label="@string/title_activity_koffer">
         </activity>
         <activity android:name="NotfallKofferZweiActivity"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.NotfallKofferActivity"
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.EmergencyCaseActivity"
             android:label="@string/title_activity_koffer2">
         </activity>
         <meta-data
