Email and Token have to be entered and a PIN has to be created at the first start of the app now. For testing email="o.mckinney@localhost.com" token="123"

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -34,11 +34,11 @@
 
         </activity>
         <activity
-            android:name="de.hawlandshut.rueckfallprophylaxe.ui.PasswordDetermine"
+            android:name="de.hawlandshut.rueckfallprophylaxe.ui.PasswordDetermineActivity"
             android:label="@string/title_password_determine" >
         </activity>
         <activity
-            android:name="de.hawlandshut.rueckfallprophylaxe.ui.PasswordVerify"
+            android:name="de.hawlandshut.rueckfallprophylaxe.ui.PasswordVerifyActivity"
             android:label="@string/title_password_verify" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
