--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="PinShare">
         
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity"
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryActivity"
+            android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryEntryListActivity"
             android:label="@string/title_activity_diary"
             android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity" >
             <meta-data
@@ -57,7 +57,7 @@
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryNewEntryActivity"
             android:label="@string/title_activity_new_entry"
-            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.DiaryActivity" >
+            android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.DiaryEntryListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.DiaryActivity" />
