--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/red_light"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:name="PinShare">
         
