--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -58,7 +58,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity" />
-        </activity>
+        </activity><activity android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryImageViewActivity" android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.DiaryNewEntryActivity" android:label="Betrachte Bild"></activity>
         <activity
             android:name="de.hawlandshut.rueckfallprophylaxe.ui.DiaryNewEntryActivity"
             android:label="@string/title_activity_new_entry"
@@ -109,6 +109,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hawlandshut.rueckfallprophylaxe.ui.EmotionActivity" />
         </activity>
+        
         <activity android:name="EmergencyCaseActivity"
             android:parentActivityName="de.hawlandshut.rueckfallprophylaxe.ui.HomeActivity"
             android:label="@string/title_activity_koffer">
@@ -136,5 +137,6 @@
 		<meta-data
      		android:name="com.google.android.maps.v2.API_KEY"
      		android:value="AIzaSyAZvUzAQR5yiFEQW6Hb7VrmIIYJDxkRG7M" />
+		
     </application>
 </manifest>
